[package]
name = "cron-lingo"
version = "0.3.1"
authors = ["Peter Sebastian Pütz <ppuetz@protonmail.com>"]
edition = "2018"
repository = "https://github.com/puetzp/cron-lingo"
documentation = "https://docs.rs/cron-lingo"
readme = "README.md"
license = "MIT"
description = "Alternative cron-like expression parser for schedulling"
keywords = ["time", "cron", "schedule"]

[dependencies]
time = "=0.2.22"
